--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,12 @@
 # User-specific files
 .Ruserdata
 
+# targets files
+_targets/
+#in/
+#out/
+#!*.empty
+
 # Example code in package build process
 *-Ex.R
 
